--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -4,65 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="25dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/TVWelcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:text="Welcome User!"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RVMoodNote"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:padding="@dimen/big_padding"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/individual_item__view" />
 
-    <TextView
-        android:id="@+id/TVTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="(App-Specific Storage)"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TVWelcome" />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/FCVCreateUser"
-        android:name="com.example.p8.FirstLoginFragment"
-        android:layout_width="408dp"
-        android:layout_height="284dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/TVTitle"
-        tools:layout="@layout/fragment_first_login"
-        tools:layout_editor_absoluteX="3dp" />
-
-    <Button
-        android:id="@+id/BtnViewGallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:onClick="BtnGalleryOnClick"
-        android:text="GALLERY (SHARED STORAGE)"
-        app:layout_constraintBottom_toTopOf="@+id/BtnSettings"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/FCVCreateUser"
-        app:layout_constraintVertical_bias="0.673" />
-
-    <Button
-        android:id="@+id/BtnSettings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:layout_marginBottom="133dp"
-        android:onClick="BtnSettingOnClick"
-        android:text="SETTINGS (PREFERENCE)"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/FABAddNote"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/BtnViewGallery" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:contentDescription="Add Note"
+        android:src="@drawable/baseline_add_circle_24"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
